# gdk

docker/android/: Dockerfile
include/: gdk.h
src/: utils.cpp
src/swig_java/: swig_green_gdk.i
subprojects/gdk_rust/: Cargo.toml
subprojects/gdk_rust/gdk_common/: Cargo.toml
subprojects/gdk_rust/gdk_electrum/: Cargo.toml
subprojects/gdk_rust/gdk_pin_client/: Cargo.toml
subprojects/gdk_rust/gdk_pin_client/src/: crypto.rs
subprojects/gdk_rust/gdk_registry/: Cargo.toml
subprojects/gdk_rust/gdk_rust/: Cargo.toml
subprojects/gdk_rust/gdk_rust/src/: lib.rs
subprojects/gdk_rust/gdk_test/: Cargo.toml
tools/: build.sh
