[package]
name = "gdk-rust"
version = "0.1.0"
authors = [
    "Riccardo Casatta <riccardo@casatta.it>",
    "Nadav Ivgi <nadav@shesek.info>",
]
license = "(MIT)"
edition = "2024"
rust-version = "1.90.0"

[lib]
crate-type = ["staticlib"]


[dependencies]
gdk-common = { path = "../gdk_common" }
gdk-electrum = { path = "../gdk_electrum", features = ["testing"] }
gdk-registry = { path = "../gdk_registry" }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

simplicityhl = { version = "0.4.0" }
contracts = { git = "https://github.com/BlockstreamResearch/simplicity-contracts.git", rev = "b3d1ae9", package = "contracts" }
simplicityhl-core = { version = "0.3.1", package = "simplicityhl-core" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.8.6"

[dev-dependencies]
gdk-test = { path = "../gdk_test" }
tempfile = "3.2.0"
bitcoin = { version = "0.32", features = ["serde"] }
elements = { version = "0.25", features = ["serde"] }
# TODO: remove "legacy" feature when upgrading electrs binaries
electrsd = { version = "0.29.0", features = ["legacy"] }
env_logger = "0.10.0"
base64 = "0.13"
